crates/component-shape-gpui/tests/ui/missing_value.stderr
error: `component_shape!` requires value metadata; add `value = ...`, `values(...)`, or a nested `GpuiComponentValueBinding<T>` impl
 --> tests/ui/missing_value.rs:6:16
  |
6 |     pub struct MissingValue {
  |                ^^^^^^^^^^^^
